<resources>
    <string name="app_name">Loiu</string>
    <string name="bemVindo">Bem-Vindo(a)</string>
    <string name="informeCelular">Informe seu celular</string>
    <string name="TokenAcesso">Token de acesso</string>
    <string name="DadosCnpj">Dados do CNPJ</string>
    <string name="DadosPessoal">Dados Pessoais</string>
    <string name="DadosDocumento">Foto de Documento</string>
    <string name="DadosAreaAtuacao">Área de Atuação</string>
    <string name="CodigoIndicacao">Código de Indicação</string>
    <string name="ContratoAceite">Contrato de Aceitação</string>
    <string name="assinaturaContrato">Assinatura do Contrato</string>
    <string name="confirmeSeuAcesso">Confirme seu acesso</string>
    <string name="home">Home</string>
    <string name="AtualizarDados">"Atualizar Dados</string>
    <string name="meusDados">Meus Dados</string>
    <string name="meuTime">Meu Time</string>
    <string name="DadosCadastrais">Dados cadastrais</string>
    <string name="MinhaEmpresa">Minha empresa</string>
    <string name="DadosBancários">Dados Bancários</string>
    <string name="Home">Home</string>
    <string name="financeiro">Financeiro</string>
    <string name="notificacoes">Notificações</string>
    <string name="naoTenhoAcessoaoWhatsapp">não tenho acesso ao whatsapp</string>
    <string name="naoLidas">Não lidas</string>
    <string name="lidas">Lidas</string>
    <string name="marcaTodasComoLidas">marcar todas como lidas</string>
    <string name="tituloErro">Ops!</string>
    <string name="erroSolicitaToken">Algo deu errado, tente novamente</string>
    <string name="reenviarToken">Reenviar token em </string>
    <string name="erroCodigoIndicacao">Código de indicação inválido </string>
    <string name="erroCnpj">Não foi possível carregar os dados do CNPJ</string>
    <string name="erroFoto">Adicione uma foto do documento</string>
    <string name="erroCadastro">Algo deu errado no envio de cadastro, tente novamente em instantes</string>
    <string name="erroAtualiza">Algo deu errado na atualização do cadastro, tente novamente em instantes</string>
    <string name="erroBuscaPDv"> Nenhum PDV encontrado com o termo</string>
    <string name="erroiometria"> parece que voce não possui biometria </string>
    <string name="erroPadrao">Algo deu errado, tente novamente</string>
    <string name="erroDeLogin">Algo deu errado, tente fazer login de outra forma</string>
    <string name="possuiCore">Possui CORE ?</string>
    <string name="razaoSocial">Razão Social</string>
    <string name="nomeFantasia">Nome Fantasia</string>
    <string name="cep">CEP</string>
    <string name="endereco">Endereço</string>
    <string name="bairro">Bairro</string>
    <string name="cidade">Cidade</string>
    <string name="cidades">Cidades</string>
    <string name="estado">Estado</string>
    <string name="estados">Estados</string>
    <string name="mesorregioes">Mesorregiões</string>
    <string name="erroAceites">Você precisa aceitar os Termos de Uso, Políticas de Privacidade e o Contrato para continuar.</string>
    <string name="erroTermo">Para prosseguir, aceite os Termos de Uso.</string>
    <string name="erroContrato">Por favor, aceite o Contrato para avançar.</string>
    <string name="erroTermosEPolitica">Você precisa aceitar os Termos de Uso e as Políticas de Privacidade para prosseguir.</string>
    <string name="erroContratoEPolitica">Aceite as Políticas de Privacidade e o Contrato para continuar.</string>
    <string name="erroContratoETermos">Você precisa aceitar as Políticas de Privacidade para prosseguir.</string>
    <string name="erroTermosEContrato">Para avançar, aceite os Termos de Uso e o Contrato.</string>
    <string name="cnpj">CNPJ</string>
    <string name="celular">Celular</string>
    <string name="continuar">Continuar</string>
    <string name="adiconarFoto">Adicionar Foto</string>
    <string name="nome">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="todos">Todas</string>
    <string name="cpf">CPF</string>
    <string name="dataNacimento">Data de Nascimento</string>
    <string name="codigoIndicao">Código de indicação</string>
    <string name="telefoneComercial">Telefone Comercial</string>
    <string name="email">E-mail</string>
    <string name="TituloErro">Erro</string>
    <string name="finalizar">Finalizar</string>
    <string name="entrar">Entrar</string>
    <string name="vendas">Vendas</string>
    <string name="iniciarVendas">Iniciar Venda</string>
    <string name="merchandise">Merchandising</string>
    <string name="ProgramaDeincentivos">Programa de incentivo</string>
    <string name="clubeDeCompras">Clube de compras</string>
    <string name="VendaRemota">Venda remota</string>
    <string name="TeleVendas">Televendas</string>
    <string name="linkExclusivo">Link Exclusivo</string>
    <string name="PedidoSugestaao">Pedido Sugestão</string>
    <string name="agenda">Agenda</string>
    <string name="suporte">Suporte</string>
    <string name="Roteiro">Roteiro</string>
    <string name="calendario">Calendário</string>
    <string name="visitas">Visitas</string>
    <string name="treinamento">Treinamentos</string>
    <string name="redesSociais">Redes Sociais</string>
    <string name="instagram">Instagram</string>
    <string name="linkDin">Linkedin</string>
    <string name="relatorios">
        Relatórios
    </string>
    <string name="cargasDeDados"> atualizar carga</string>
    <string name="CadastroPreposto">Cadastro de prepostos</string>
    <string name="GestaoDeComisso">Gestão de comissões</string>
    <string name="ExtratoDeComissões">Extrato de comissões</string>
    <string name="Merchandising">Merchandising</string>
    <string name="loiuInforma">Loiu informa</string>
    <string name="informe">Informe seu CNPJ para prosseguir\ncom o seu acesso</string>
    <string name="DadosAtuazlizadoComSucesso">Dados atualizados com sucesso</string>
    <string name="dadosBancariosDescricao">Os dados bancários para recebimento devem estar associados a conta PJ do CNPJ </string>
    <string name="Instituição">Instituição</string>
    <string name="Agencia">Agência</string>
    <string name="conta">Conta</string>
    <string name="salvar">Salvar</string>
    <string name="dadosBancarios">Dados Bancarios</string>
    <string name="erro_busca_dados_bancarios"> Algo deu errado ao buscar os dados bancários, tente novamente </string>
    <string name="informaDivergencia">Informa divergência </string>
    <string name="descrincaoInstituicao">Selecione abaixo a instituição financeira da sua conta</string>
    <string name="slecioneAmbiente">Informe o ambiente que deseja acessar</string>
    <string name="informeCelularDescricao">Informe seu celular para receber seu\n token de acesso</string>
    <string name="informeToken">Informe abaixo o token enviado por WhatsApp para o número</string>
    <string name="naoRecebiToken">não recebi o token</string>
    <string name="inormacaoCelular">Número informado no \nacesso para recebimento \nde token</string>
    <string name="inormacaoCore">CORE é a sigla para \n Conselho Regional \n dos Representantes Comerciais</string>
    <string name="infoTireUmaFoto">Tire uma foto do seu documento pessoal de identificação (RG ou CNH)</string>
    <string name="infosFotos">• O documento deve estar aberto e aparecendo  ............. por completo;\n
        •  Certifique-se que todos os dados estejam legíveis;\n
        •  Tire a foto em um local iluminado;\n
        •  Evite reflexos na foto;\n
        •  Evite fundos estampados na foto.</string>
    <string name="infoMesorregiao">Selecione abaixo as mesorregiões que deseja realizar suas vendas</string>
    <string name="infoCidades">As cidades são de acordo com as\n mesorregiões escolhidas anteriormente</string>
    <string name="infoIndicacao"> Você foi indicado? Informe o código de quem te indicou e confirme os dados</string>
    <string name="continuarSemCodigo">Continuar sem código</string>
    <string name="infoEstados">Selecione abaixo o estado que deseja realizar suas vendas</string>
    <string name="limparTexto">Limpar assinatura</string>
    <string name="acessarOutraConta">Acessar outra conta</string>
    <string name="tokenSolicitadoComSucesso">Token solicitado com sucesso</string>
    <string name="seuTokenseraEnviadoPorSms"> Seu token será enviado por SMS!</string>
    <string name="entrarComToken">Entrar com token</string>
    <string name="fraseWhatsVendaRemota">Olá, o link para sua venda remota está disponivel! </string>
    <string name="CargaAtualizada">Cargas Atualizadas</string>
    <string name="AtualizandoCargas">Atualizando Cargas...</string>
    <string name="ErroCarga">Erro ao Gerar Cargas, tente atualziar novamente</string>
    <string name="euliEAceito">Eu li e aceito as</string>
    <string name="politicaPrivacidade">Políticas de Privacidade</string>
    <string name="termosDeUso">
        Termos de uso
    </string>
    <string name="infoContrato">Eu li e aceito as normas do contrato
    </string>
    <string name="infoSucesso">
        Você completou seu cadastro e com isso, te damos as boas-vindas ao Loiu.\n\n

Falta pouco para você maximizar suas vendas, representando as melhores marcas com as melhores condições OL para seus clientes.\n\n

Entraremos em contato via WhatsApp e/ou telefone para validar os dados e agendar um primeiro contato com nosso gestor de vendas, que te passará todas as condições comerciais e o treinamento que você precisa para começar suas vendas.\n \n

Dúvidas sobre o seu cadastro ou sobre o Loiu,
    </string>
    <string name="faleComNossaEquipe">Fale com nossa equipe.</string>
    <string name="buscarMessoregiao"> Buscar mesorregião</string>
    <string name="buscaCidades">Buscar Cidades</string>
    <string name="buscaInstituicao">Buscar instituição</string>
    <string name="mascaraCnpj">00.000.000/0000-00</string>
    <string name="mascaraCpf">000.000.000-00</string>
    <string name="mascaraCep">00000-000</string>
    <string name="mascaraData">00/00/0000</string>
    <string name="mascaraCelular">00 0 0000-0000</string>
    <string name="mascaraTelefone">00 0000-0000</string>
    <string name="mascaraEmail">email@email</string>
    <string name="Selecione">Selecionar...</string>
    <string name="Selecionar">Selecionar</string>
    <string name="erroSuporteWhats">Algo deu errado, tente novamente mais tarde</string>
    <string name="erroSenha">Senha incorreta</string>
    <string name="completeToken">Complete o token de acesso</string>
    <string name="erroInternet">Erro ao buscar dados</string>
    <string name="erroMessoRegiao">Selecione uma mesorregião</string>
    <string name="preencha_todos_os_campos">preencha todos os campos para prosseguir</string>
    <string name="erro_atualiza_dados_bancarios"> Algo deu errado ao atualizar os dados bancários, tente novamente</string>
    <string name="descricaoVisaulizaSenha">clique aqui para visualizar senha</string>
    <string name="strAr">vamos para o ambiente de Ar</string>
    <string name="strStage">vamos para o ambiente de Stage</string>
    <string name="strQA">vamos para o ambiente de QA</string>
    <string name="strExterno">vamos para o ambiente de Externo</string>
    <string name="strInterno">vamos para o ambiente de Interno</string>
    <string name="ambienteAr">Estamos no Ar</string>
    <string name="ambienteStage">Estamos no Stage</string>
    <string name="ambienteQA">Estamos no QA</string>
    <string name="ambienteExterno">Estamos no Externo</string>
    <string name="ambienteInterno">Estamos no Interno</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>