<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Presenter.View.Fragments.Cadastro.DadosPessoaisFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroolPessoais"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView7"
                    style="@style/textoTituloInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="48dp"
                    android:text="@string/nome"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </TextView>

                <EditText
                    android:id="@+id/inputNome"
                    style="@style/inputPadraoCadastro"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/nome"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7">

                </EditText>
                <TextView
                    android:id="@+id/textView8"
                    style="@style/textoTituloInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/sobrenome"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </TextView>

                <EditText
                    android:id="@+id/inputSobrenome"
                    style="@style/inputPadraoCadastro"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/sobrenome"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7">

                </EditText>
                <TextView
                    android:id="@+id/textView9"
                    style="@style/textoTituloInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/cpf"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </TextView>

                <EditText
                    android:id="@+id/inputCpf"
                    style="@style/inputPadraoCadastro"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/mascaraCpf"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7">

                </EditText>

                <TextView
                    android:id="@+id/textView10"
                    style="@style/textoTituloInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/dataNacimento"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </TextView>

                <EditText
                    android:id="@+id/inputDataNacimento"
                    style="@style/inputPadraoCadastro"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/mascaraData"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7">

                </EditText>
                <TextView
                    style="@style/textoTituloInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/celular"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </TextView>

                <EditText
                    android:id="@+id/inputCelular"
                    style="@style/inputPadraoCadastro"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/mascaraCelular"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7">

                </EditText>
                <TextView
                    style="@style/textoTituloInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/telefoneComercial"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </TextView>

                <EditText
                    android:id="@+id/inputTelefoneComercial"
                    style="@style/inputPadraoCadastro"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/mascaraTelefone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7">

                </EditText>
                <TextView
                    style="@style/textoTituloInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/email"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </TextView>

                <EditText
                    android:id="@+id/inputEmail"
                    style="@style/inputPadraoCadastro"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/mascaraEmail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7">

                </EditText>

                <TextView
                    android:id="@+id/btnContinuar"
                    style="@style/buttonPadraoCadastro"
                    android:layout_marginTop="48dp"
                    android:layout_marginBottom="32dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </TextView>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>



</FrameLayout>