<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bordas_12_top">


    <TextView
        android:id="@+id/tituloModalAreaDeAtuacao"
        style="@style/textoTitulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:textFontWeight="700"
        android:text="@string/Instituição"
        app:layout_constraintEnd_toStartOf="@+id/fecharAreaDeAtuacao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/fecharAreaDeAtuacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtituloModalAreaDeAtuacao"
        style="@style/textoSubTitulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:text="@string/descrincaoInstituicao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloModalAreaDeAtuacao" />

    <EditText
        android:id="@+id/inputBuscaInstituicao"
        style="@style/inputPadraoCadastro"
        android:layout_width="match_parent"
        android:drawableStart="@drawable/busca"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:inputType="text"
        android:drawablePadding="16dp"
        android:hint="@string/buscaInstituicao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtituloModalAreaDeAtuacao">

    </EditText>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerInstituicao"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="195dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputBuscaMessoRegiao" />




</androidx.constraintlayout.widget.ConstraintLayout>