<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Presenter.View.Fragments.Home.DadosBancariosFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/descricaoDadosBancarios"
                    style="@style/texto14sp_gray600_normal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="48dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/dadosBancariosDescricao"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textoDados"
                    style="@style/textoBold14sp_gray600"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    app:layout_constraintEnd_toEndOf="@+id/descricaoDadosBancarios"
                    app:layout_constraintStart_toStartOf="@+id/descricaoDadosBancarios"
                    app:layout_constraintTop_toBottomOf="@+id/descricaoDadosBancarios" />

                <TextView
                    android:id="@+id/textView34"
                    style="@style/textoTituloInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/Instituição"
                    app:layout_constraintStart_toStartOf="@+id/textoDados"
                    app:layout_constraintTop_toBottomOf="@+id/textoDados" />

                <TextView
                    android:id="@+id/inputInstituicao"
                    style="@style/inputPadraoCadastro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/seta_baixo"
                    android:paddingTop="14dp"
                    android:text="@string/Selecione"
                    android:textColor="@color/gray500"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView34" />

                <TextView
                    android:id="@+id/textView35"
                    style="@style/textoTituloInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/Agencia"
                    app:layout_constraintStart_toStartOf="@+id/textoDados"
                    app:layout_constraintTop_toBottomOf="@+id/inputInstituicao" />

                <EditText
                    android:id="@+id/inputAgencia"
                    style="@style/inputPadraoCadastro"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:autofillHints="family-name"
                    android:hint="0000"
                    android:importantForAutofill="no"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView35">

                </EditText>


                <TextView
                    android:id="@+id/textView36"
                    style="@style/textoTituloInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/conta"
                    app:layout_constraintStart_toStartOf="@+id/textoDados"
                    app:layout_constraintTop_toBottomOf="@+id/inputAgencia" />

                <EditText
                    android:id="@+id/inputConta"
                    style="@style/inputPadraoCadastro"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:autofillHints="family-name"
                    android:hint="00000-0"
                    android:importantForAutofill="no"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView36">

                </EditText>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button"
                    style="@style/buttonPadraoCadastroSelecionar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="62dp"
                    android:text="@string/salvar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/inputConta"
                    app:layout_constraintVertical_bias="1.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constrainCarregando"
            android:layout_width="match_parent"
            android:background="#8A474849"
            android:visibility="gone"
            android:layout_height="match_parent"
            android:elevation="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:progressTint="@color/blue300"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:elevation="21dp"
                app:layout_constraintTop_toTopOf="parent">

            </ProgressBar>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>